# ray-tracers

./: .stylish-haskell.yaml  CHANGELOG.md  Camera.hs  Hittable.hs  Image.hs  Main.hs  Makefile  README.md  Ray.hs  Utils.hs  Vec.hs  default.nix  environment.fish  extrapolate  ray-tracers.cabal  render.sh  shell.nix
nix/: sources.json
src/: BaseVec.hs  Camera.hs  Colors.hs  Hittable.hs  Image.hs  Main.hs  Materials.hs  Ray.hs  Samplings.hs  Scenes.hs  Utils.hs  Vec.hs
