cabal-version:       >=1.10

name:                ray-tracers
version:             0.1.0.0
synopsis:
description:
bug-reports:
license:
license-file:        LICENSE
author:              Sarfaraz Nawaz
maintainer:          sarfaraz.nawaz@tenx.tech
copyright:
category:
build-type:          Simple
extra-source-files:

executable ray-tracers
  main-is:             Main.hs
  other-modules:       Image
                       Colors
                       Vec
                       Utils
                       Ray
                       Hittable
                       Camera
                       Samplings
                       Scenes
  build-depends:       base >=4.12 && <4.13,
                       random >=1.2,
                       deepseq >= 1.4.4.0,
                       parallel >= 3.2.2.0,
                       numeric-limits >= 0.1.0,
                       directory >= 1.3,
                       array >= 0.5,
                       time >= 1.1,
                       pretty-terminal >= 0.1.0
  hs-source-dirs:      src
  ghc-options:         -O2
                        -rtsopts -threaded -eventlog
                        -fllvm -optc-mfpmath=sse  -fexcess-precision -optlo-O3 -funfolding-use-threshold1000 -optl-ffast-math
                        -Wall 
                        -Werror=missing-import-lists -Werror=missing-export-lists
                        -Wno-type-defaults 
  -- ghc-options:         -threaded -rtsopts -eventlog -O2 
                       -- -fspec-constr-count=16 -fllvm -optc-mfpmath=sse  -fexcess-precision -optlo-O3 -funfolding-use-threshold1000 -optl-ffast-math
  default-language:    Haskell2010
